--- a/cpp/ScopeDisplay/CMakeLists.txt
+++ b/cpp/ScopeDisplay/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ScopeDisplay)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 include_directories(../pugixml/src/)
-add_executable(ScopeDisplay ScopeDisplayMain.cpp)
+add_executable(ScopeDisplay ScopeDisplayMain.cpp PathExtractor.hpp)
